<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    tools:context=".activity.AuthenticationActivity">

    <ImageView
        android:id="@+id/authentication_logo"
        android:layout_width="190dp"
        android:layout_height="154dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/authentication_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Welcome to Vibester"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authentication_logo" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="407dp"
        android:layout_height="390dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authentication_status">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <Space
                android:layout_width="match_parent"
                android:layout_height="62dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="email"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="password"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/logIn"
                android:layout_width="200dp"
                android:layout_height="48dp"

                android:backgroundTint="@color/cg_blue"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/authentication_logIn"
                android:translationZ="10dp" />

            <Button
                android:id="@+id/googleBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cg_blue"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/authentication_googleLogIn"
                android:translationZ="10dp" />

            <Button
                android:id="@+id/createAcc"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/cg_blue"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/authentication_createAcc"
                android:translationZ="10dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>