<resources>
    <!-- Cleaned String-->
    <!-- General -->
    <string name="app_name">Vibester</string>
    <string name="log_tag">[VibesterLOG]</string>

    <!-- Welcome Screen -->
    <string name="welcomeScreen_playAGame">Play a game</string>
    <string name="welcomeScreen_scoreboard">Scoreboard</string>
    <string name="welcomeScreen_myAccount">My account</string>
    <string name="welcomeScreen_scanning">Scanning</string>
    <string name="welcomeScreen_download">Download</string>

    <!-- Authentication -->
    <string name="authentication_placeholderHandle">Placeholder Handle</string>
    <string name="authentication_placeholderUsername">Placeholder Username</string>
    <string name="authentication_placeholderEmptyScore">Error</string>
    <string name="authentication_noActionDoneYet">Either log in with your Google account or fill in credentials to create an account or log in</string>
    <string name="authentication_createAcc">Create Account</string>
    <string name="authentication_logIn">Log in</string>
    <string name="authentication_googleLogIn">Log in with Google</string>
    <string name="authentication_forgotPassword">Forgot Password</string>
    <string name="authentication_emptyField">Empty email or password</string>
    <string name="authentication_notAnEmail">Not an email</string>
    <string name="authentication_shortPassword">Password has to be at least 6 symbols</string>
    <string name="authentication_resetPasswordError">Failed to send password recovery email</string>
    <string name="authentication_welcomeToVibester">Welcome to Vibester</string>

    <!-- QrScanning -->
    <string name="qrScanning_scannerClosed">Scanner has been closed</string>
    <string name="qrScanning_cameraError">Camera Permission should be granted for that feature</string>
    <string name="qrScanning_noExistUid">Error not an existing uid</string>
    <string name="qrScanning_newFriend">Congratulations, you have a new friend</string>

    <!-- GameSetup -->
    <string name="GameSetup_internetSwitchOn">Internet is on</string>
    <string name="GameSetup_internetSwitchOff">Internet is off</string>
    <string name="GameSetup_easy">Easy</string>
    <string name="GameSetup_medium">Medium</string>
    <string name="GameSetup_hard">Hard</string>
    <string name="GameSetup_ask_difficulty">Please choose the difficulty of your game</string>
    <string name="gameSetup_offlineGame">Offline Game</string>
    <string name="gameSetup_offlineBuzzer">Offline Buzzer</string>


    <string-array name="difficulties_name">
        <item>@string/GameSetup_easy</item>
        <item>@string/GameSetup_medium</item>
        <item>@string/GameSetup_hard</item>
    </string-array>

    <!-- TypingGame -->
    <string name="TypingGame_currentRound">Round\ </string>
    <string name="TypingGame_yourScore0">Your score: 0</string>
    <string name="TypingGame_yourScore">\Your score:\ </string>

    <!-- BuzzerScreen -->
    <string name="BuzzerScreen_noWinner">Nobody won this game!</string>
    <string name="BuzzerScreen_oneWinner">And the winner is…\ </string>
    <string name="BuzzerScreen_moreThanOneWinner">And the winners are…\</string>
    <string name="BuzzerScreen_skip">SKIP</string>
    <string name="BuzzerScreen_wrong">Wrong</string>
    <string name="BuzzerScreen_correct">Correct</string>
    <string name="BuzzerScreen_ask_nb_players">Please choose the number of players in your game</string>
    <string-array name="nb_players">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
    </string-array>
    <string name="BuzzerScreen_player_missing">Please enter a name for every player.</string>
    <string name="BuzzerScreen_ok">OK</string>

    <!-- GameEnding -->
    <string name="gameEnding_unconnectedUsername">UNCONNECTED</string>


    <!-- GameGenre -->
    <string name="gameGenre_validate">Validate</string>
    <string name="gameGenre_billie_eilish">Billie Eilish</string>
    <string name="gameGenre_imagine_dragons">Imagine Dragons</string>
    <string name="gameGenre_bts">BTS</string>
    <string name="gameGenre_r_o_c_k">R O C K</string>
    <string name="gameGenre_k_p_o_p">K P O P</string>
    <string name="gameGenre_t_o_p_t_r_a_c_k_s">T O P T R A C K S</string>
    <string name="gameGenre_byArtistSearch">Personalized Artist</string>

    <!-- AppPreferences -->
    <string name="preferences_game_mode">game_mode</string>
    <string name="preferences_game_genre">game_genre</string>

    <!-- Profile -->
    <string name="profile_verify_change_profile_pic">Do you want to change your profile picture?</string>
    <string name="profile_logout">logout</string>
    <string name="profile_scores">Scores</string>
    <string name="profile_following">Following</string>
    <string name="test_profile_image">bit.ly/3IUnyAF</string>
    <string name="profile_username">Profile Username</string>
    <string name="profile_my_music">My Music</string>

    <!-- ScoreBoard -->
    <string name="scoreboard">S C O R E B O A R D</string>

    <!-- OLD String-->
    <string name="total_games">Total Games</string>
    <string name="proceed">PROCEED</string>

    <string name="app_logo">app_logo</string>

    <string name="welcome_text">Welcome to Vibester!</string>
    <string name="what_music">What is the music ?</string>

    <string name="your_guess">Enter your guess</string>

    <string name="game_end__stat_1">Stat 1</string>
    <string name="game_end__stat_1_result">Stat 1 Result</string>
    <string name="game_end__stat_2">Stat 2</string>
    <string name="game_end__stat_2_result">Stat 2 Result</string>
    <string name="game_end__stat_3">Stat 3</string>
    <string name="game_end__stat_3_result">Stat 3 Result</string>
    <string name="game_end__stat_4">Stat 4</string>
    <string name="game_end__stat_4_result">Stat 4 Result</string>
    <string name="game_end__stat_5">Stat 5</string>
    <string name="game_end__stat_5_result">Stat 5 Result</string>
    <string name="game_end__stat_6">Stat 6</string>
    <string name="game_end__stat_6_result">Stat 6 Result</string>

    <string name="go_to_end">GO TO END</string>
    <string name="inc_all_correct">You got every song correctly. Congrats!</string>
    <string name="editUsername">Edit Username</string>
    <string name="editHandle">Edit Handle</string>
    <string name="holder_setup_game_type">Choose the game you want to play:</string>
    <string name="welcome_download">DOWNLOAD</string>
    <string name="download_songname">Enter a song name…</string>
    <string name="download_download">DOWNLOAD SONG</string>
    <string name="download_to_manager">Manage downloaded songs</string>
    <string name="delete_songs_description">CHOOSE A SONG TO DELETE:</string>
    <string name="delete_nothing_to_delete">YOU HAVE NO DOWNLOADED SONGS!</string>
    <string name="download_download_complete">Download completed!</string>
    <string name="download_try_another">Try another song!</string>
    <string name="download_already_done">Song already downloaded!</string>
    <string name="download_try_different">Try a different song!</string>
    <string name="download_unable_to_find">Unable to find song, please retry!</string>
    <string name="download_retry">Please retry!</string>
    <string name="download_permission_denied">Permission denied, cannot download!</string>
    <string name="download_already_downloading">A song is being downloaded, please be patient!</string>
    <string name="download_please_retry_later">Please retry later!</string>
    <string name="download_indicator">Please write the name of the song you desire to download in the following format:\n Song Name - Artist Name</string>
    <string name="download_manager_delete_success">Successfully remove song</string>
    <string name="download_manager_delete_fail">unable to remove song</string>

    <string name="Singleplayer">Single-player</string>
    <string name="Multiplayer">Multiplayer</string>
    <string name="game_buzzer_title">Local Buzzer</string>
    <string name="online_game_buzzer_title">Online Buzzer</string>
    <string name="join_room">Join party room</string>
    <string name="create_room">Create party room</string>


    <string name="game_typing">Local Typing</string>
    
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>

    <string-array name="game_size_options">
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
        <item>@string/five</item>
        <item>@string/six</item>
        <item>@string/seven</item>
        <item>@string/eight</item>
        <item>@string/nine</item>
        <item>@string/ten</item>
    </string-array>



    <string name="next">Next</string>
    <string name="check_for_correctness">Check for correctness</string>
    <string name="result_will_show_here">result will show here</string>
    <string name="welcome_not_logged_in">"User: Not Logged In"</string>
    <string name="game_lyrics">Local Lyrics</string>
    <string name="search_users">SEARCH USERS</string>
    <string name="no_lyrics_found">No lyrics found, try the next song</string>
    <string name="correct_message">%1$d Well Done!</string>
    <string name="wrong_message">Sadly you\'re wrong</string>
    <string name="wrong_message_with_answer">Sadly you\'re wrong, it was %1$s by %2$s</string>
    <string name="user_add_friend">Add</string>


    <string name="rock">rock</string>
    <string name="kpop">kpop</string>
    <string name="top_tracks">Top Tracks</string>

    <string name="PartyRoom_joinedPeople">Joined People:</string>
    <string name="LyricsBelongGame_skip">SKIP</string>
    <string name="TypingGame_skip">SKIP</string>

    <string name="searchUser_pleaseLogInFirst">Please login first</string>



</resources>